# worker

./: .dockerignore  .gitignore  Dockerfile.operator-api  LOCKED_DECISIONS.md  MASTER_PLAN.md  OPEN_QUESTIONS.md  PHASES.md  README.md  TODO.md  docker-compose.operator-api.yml  pyproject.toml
config/: README.md  facebook_graph_config.example.json  openai_provider_config.example.json  operator_api_config.example.json  wordpress_rest_config.example.json
data/: README.md  source_registry.json
deploy/: README.md
deploy/caddy/: content-ops-operator-api.Caddyfile.example
deploy/coolify/: operator-api.env.example
deploy/nginx/: content-ops-operator-api.nginx.example
deploy/systemd/: content-ops-daily-reports.service.example  content-ops-daily-reports.timer.example  content-ops-operator-api.service.example  content-ops-runtime-backup.service.example  content-ops-runtime-backup.timer.example  content-ops-source-intake.service.example  content-ops-source-intake.timer.example
docs/execution/: ACTIVE_SOURCE_REGISTRY_RECORDS_V1.md  ACTIVE_SOURCE_REGISTRY_V1.md  APPROVAL_UI_RUNBOOK.md  CONTENT_ENGINE_RUNBOOK.md  COOLIFY_OPERATOR_API_DEPLOYMENT_RUNBOOK.md  DISTRIBUTION_ENGINE_RUNBOOK.md  INTAKE_LOG_TEMPLATE.md  LIVE_INTAKE_LOG.md  LIVE_SHORTLIST_LOG.md  OPERATIONS_AND_DEPLOYMENT_RUNBOOK.md  PHASE_2_ACCEPTANCE_BATCH_1.md  PHASE_2_ACCEPTANCE_BATCH_2.md  PHASE_2_ACCEPTANCE_BATCH_3.md  PHASE_2_ACCEPTANCE_BATCH_4.md  PHASE_2_ACCEPTANCE_BATCH_5.md  PHASE_2_ACCEPTANCE_BATCH_6.md  PHASE_2_ACCEPTANCE_BATCH_7.md  (+48 more)
scripts/: run_operator_api.ps1
tests/: __init__.py
(+312 files in other folders)
